# structuredData

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  dependencies.fish
c/: .gitignore  Makefile.am  README.md
c/doc/: structuredDataC_doc.pd
c/doc/modules/: sdData_doc.pd  sdEvent_doc.pd  sdList_doc.pd  sdObjState_doc.pd  sdObjState_example.pd  sdPack_doc.pd  sdReceiver_ui.pd  sdSender_ui.pd  sdSndRcvDuplex_ui.pd  sdUtils_doc.pd
c/pd_objs/: sdAnyBang.pd  sdConnectFrom.pd  sdConnectTo.pd  sdExampleObj.pd  sdFloatBang.pd  sdObjDuplexExample.pd  sdObjExample.pd  sdObjListen.pd  sdObjRcvExample.pd  sdObjSaveAll.pd  sdObjSndExample.pd  sdObjTrack.pd  sdSymbolBang.pd
c/scripts/: build.fish  build_doc.fish  build_test.fish  clean_autotools.fish  install_deps.fish  install_doc.fish  run_autotools.fish  run_doc.fish  run_test.fish  uninstall_doc.sh  uninstall_test.sh
c/src/global/: Global.h  LinkedList.h
c/src/structuredData/: sdData.c  sdEvent.c  sdList.c  sdObjState.c  sdObjState.h  sdPack.c  sdPack.h  sdProperties.c  structuredData.c  structuredData.h
c/test/: test.pd
doc/: sdDoc.pd  structuredDataC_doc.pd
doc/modules/: sdData_doc.pd  sdEvent_doc.pd  sdObjState_doc.pd
legacy/: README.md
legacy/doc/: sdDoc.pd
legacy/pd_objs/data/list/: sgList.pd  sgListContains.pd  sgListFindAll.pd  sgListGet.pd  sgListIsEqual.pd  sgListPopLast.pd  sgListRev.pd  sgSerializeRev.pd
legacy/pd_objs/data/set/: sgSet.pd  sgSetDoc.pd  sgSetMinus.pd
legacy/pd_objs/data/sgEvent/: sgEventAddParam.pd  sgEventDoc.pd  sgEventPop.pd  sgEventToMessage.pd  sgUnEvent.pd
legacy/pd_objs/data/sgPack/: sgPack.pd  sgPackFromHuman.pd  sgPackIsValid.pd  sgPackToHuman.pd  sgPackToMessage.pd  sgUnPack.pd
legacy/pd_objs/io/: sgIODoc.pd
legacy/pd_objs/math/: sgCenterDelta.pd  sgMinDelta.pd  sgMinMax.pd  sgMod.pd
legacy/pd_objs/obj_state/: ExampleObj.pd  sgObjGetAll.pd  sgObjSetAll.pd  sgObjStateDoc.pd  sgObjStateIn.pd  sgObjStateOut.pd  sgObjUI.pd  sgProperty.pd  sgPropertyList.pd  sgPropertySym.pd
legacy/pd_objs/random/: sgRandomDoc.pd  sgRandomRamps.pd  sgRandomTime.pd  sgRandomize.pd
legacy/pd_objs/sequencing/: sgSeqPlayer.pd  sgSequencingDoc.pd
legacy/pd_objs/signal/: sgGate~.pd
legacy/pd_objs/test/: sgTest.pd
legacy/pd_objs/ui/: sgF2Sig_ui~.pd  sgOut_ui~.pd  sgSig2F_ui~.pd
legacy/pd_objs/utils/: sgFilter.pd  sgFirst.pd  sgGate.pd  sgIsEqualSym.pd  sgUtilsDoc.pd
legacy/scripts/: install.fish
legacy/scripts/utils/: cmd_args.fish
pd_objs/: sdDynPatch.pd  sdObjConnectTo.pd  sdObjDuplexExample.pd  sdObjExample.pd  sdObjGenericInterfaceGroups_obj.pd  sdObjGenericInterface_obj.pd  sdObjGet.pd  sdObjGetAll.pd  sdObjGroupsInterface_obj.pd  sdObjInterface.pd  sdObjInterface_obj.pd  sdObjRcvExample.pd  sdObjSaveAll.pd  sdObjSaveAllToDisk.pd  sdObjSndExample.pd  sdObjState_ui.pd  sdObjTrack.pd  sdObjTrackAll.pd  sdTest.pd
pd_objs/basic/math/: sgMathDoc.pd
pd_objs/basic/random/: sgRandomFilter.pd
pd_objs/basic/utils/: sgAny.pd  sgAnyBang.pd  sgCounter.pd  sgFloatBang.pd  sgIsEqual.pd  sgSymbolBang.pd  sgUtilsDoc.pd
pd_objs/data/list/: sgListDel.pd  sgListDoc.pd  sgListPop.pd  sgSerialize.pd
pd_objs/data/set/: sgSetDoc.pd  sgSetFromList.pd
pd_objs/data/sgData/: sgData.pd  sgDataDoc.pd  sgDataPop.pd  sgDataSerialize.pd
pd_objs/data/sgEvent/: sgEvent.pd  sgEventDoc.pd  sgEventSerialize.pd  sgEventToMessage.pd
pd_objs/data/sgPack/: sgPackDoc.pd  sgPackFilter.pd  sgPackFromMessage.pd  sgPackSetType.pd
pd_objs/doc/: sdObjDuplexExample.pd  sdObjExample.pd  sdObjExampleManyProps.pd  sdObjRcvExample.pd  sdObjSndExample.pd  sdScript-help.pd  structuredDataC_doc.pd
pd_objs/doc/modules/: sdData-help.pd  sdDynPatching-help.pd  sdEvent-help.pd  sdList-help.pd  sdMath-help.pd  sdObjState-help.pd  sdObjState_example.pd  sdPack-help.pd  sdPackMatch-help.pd  sdUtils-help.pd
pd_objs/dyn_patch/: sdBoundingBox.pd  sdDynPatch.pd  sdLines.pd  sdLines_max.pd
pd_objs/gui/: sdGui_bool_obj_ui.pd  sdGui_bool_ui.pd  sdGui_combined_obj_ui.pd  sdGui_combined_ui.pd  sdGui_events_compact_obj_ui.pd  sdGui_events_compact_ui.pd  sdGui_events_obj_ui.pd  sdGui_events_ui.pd  sdGui_num_dyn_props.pd  sdGui_num_obj_ui.pd  sdGui_num_ui.pd  sdGui_sym_obj_ui.pd  sdGui_sym_ui.pd  sdGui_ui.pd  sdObjState_bool_dyn_props.pd  sdObjState_bool_obj_ui.pd  sdObjState_bool_ui.pd  sdObjState_box_helper.pd  sdObjState_combined_obj_ui.pd  sdObjState_combined_ui.pd  sdObjState_events_compact_dyn_props.pd  sdObjState_events_compact_obj_ui.pd  sdObjState_events_compact_ui.pd  sdObjState_events_dyn_props.pd  sdObjState_events_obj_ui.pd  sdObjState_events_ui.pd  sdObjState_num_dyn_props.pd  sdObjState_num_obj_ui.pd  sdObjState_num_ui.pd  sdObjState_sym_dyn_props.pd  sdObjState_sym_obj_ui.pd  sdObjState_sym_ui.pd  sdObjState_ui.pd
pd_objs/io/: sgIOText.pd
pd_objs/math/: sdCenterDelta.pd  sdMinDelta.pd  sdMinMax.pd  sdMod.pd
pd_objs/obj_state/: sgObjGetAll.pd  sgObjOutList.pd  sgObjStateIn.pd  sgObjTrackProperty.pd  sgProperty.pd  sgPropertyList.pd  sgPropertySym.pd
pd_objs/sequencing/: sgSeqAddTime.pd  sgSeqPlayer.pd  sgSequencingDoc.pd
pd_objs/signal/: sgF2Sig~.pd  sgSig2F~.pd
pd_objs/test/: sgTest.pd
pd_objs/ui/: sgF_ui.pd  sgIn_ui~.pd
pd_objs/utils/: sdListForEach.pd
scripts/: build.fish  exit.fish  init.fish  install.fish  install_deps.fish  install_doc.fish  local_exit.fish  local_init.fish  local_run.fish  run_doc.fish  test_debug.fish  test_init.fish  test_run.fish  uninstall.fish  uninstall_doc.fish
scripts/utils/: cmd_args.fish  install_only_abstractions.fish
src/global/: Basic.h  Buffer.h  DynArray.h  Global.h  LinkedList.h  Map.h
src/sdScript/: Commands.c  Commands.h  SymbolTable.c  SymbolTable.h  sdScript.c  sdScript.h  sdScriptObj.c  sdScriptObj.h
src/structuredData/: sdData.c  sdData.h  sdEvent.c  sdEvent.h  sdList.c  sdList.h  sdObjState.c  sdPack.c  sdPackMatch.c  sdPackMatch.h  sdProperties.c  sdProperties.h  structuredData.c
